test/compile-fail/resolution/pub/in-non-ancestral-crate/expected.txt
error: `c` is not an ancestor of `crate`
 --> top.rhdl:2:18
  |
2 |     pub(in crate::c) struct b {}
  |                   ^ not an ancestor
